--- a/index.html
+++ b/index.html
@@ -2,12 +2,81 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Voice Recorder</title>
+    <script type="module">
+      import React, { useState, useRef } from "https://esm.sh/react";
+      import ReactDOM from "https://esm.sh/react-dom/client";
+
+      function App() {
+        const [recording, setRecording] = useState(false);
+        const [audioURL, setAudioURL] = useState(null);
+        const mediaRecorderRef = useRef(null);
+        const chunksRef = useRef([]);
+
+        const startRecording = async () => {
+          try {
+            const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+            const mediaRecorder = new MediaRecorder(stream);
+
+            mediaRecorderRef.current = mediaRecorder;
+            chunksRef.current = [];
+
+            mediaRecorder.ondataavailable = (e) => {
+              if (e.data.size > 0) {
+                chunksRef.current.push(e.data);
+              }
+            };
+
+            mediaRecorder.onstop = () => {
+              const blob = new Blob(chunksRef.current, { type: "audio/webm" });
+              setAudioURL(URL.createObjectURL(blob));
+            };
+
+            mediaRecorder.start();
+            setRecording(true);
+          } catch (err) {
+            console.error("Error accessing microphone", err);
+          }
+        };
+
+        const stopRecording = () => {
+          if (mediaRecorderRef.current) {
+            mediaRecorderRef.current.stop();
+            setRecording(false);
+          }
+        };
+
+        return (
+          <div style={{ textAlign: "center", marginTop: "50px" }}>
+            <h1>🎤 Voice Recorder</h1>
+            {!recording ? (
+              <button onClick={startRecording} style={{ padding: "10px", background: "green", color: "white", border: "none", borderRadius: "5px" }}>
+                Start Recording
+              </button>
+            ) : (
+              <button onClick={stopRecording} style={{ padding: "10px", background: "red", color: "white", border: "none", borderRadius: "5px" }}>
+                Stop Recording
+              </button>
+            )}
+
+            {audioURL && (
+              <div style={{ marginTop: "20px" }}>
+                <h2>Playback:</h2>
+                <audio controls src={audioURL}></audio>
+              </div>
+            )}
+          </div>
+        );
+      }
+
+      ReactDOM.createRoot(document.getElementById("root")).render(
+        <React.StrictMode>
+          <App />
+        </React.StrictMode>
+      );
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
